新增了前三天价格态势和预测价格态势的柱状图

--- a/renren-security-master/renren-admin/src/main/resources/templates/gongzuozhan.html
+++ b/renren-security-master/renren-admin/src/main/resources/templates/gongzuozhan.html
@@ -23,7 +23,7 @@
 	</div>
     
     <div class="nav" >
-        <a class="gv" href="sucai-dapin?name=土豆&area=重庆双福国际农贸城">蔬菜态势中心</a>
+        <a class="gv" href="sucai-dapin-p?name=土豆&area=重庆双福国际农贸城">蔬菜态势中心</a>
         <a class="gv" href="mainscreen?days=60&area=重庆双福国际农贸城">情报中心</a>
         <a class="gv" href="#">物联网信息中心</a>
         <a class="gv" href="#">物流信息中心</a>
